--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,10 +52,10 @@
         <% end %>
         <a href="#" class="py-2 px-4 bg-white hover:bg-gold text-black rounded-full self-center" >Log out</a>
       </div>
-      <%# <div class="flex gap-7">
-       <a href="#" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Sign up</a>
-       <a href="#" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Log in</a>
-      </div> %>
+      <div class="flex gap-7">
+        <a href="<%= new_user_registration_path %>" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Sign up</a>
+        <a href="<%= new_user_session_path %>" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Log in</a>
+      </div>
     </header>
     <div class="flex">
       <main class="flex-grow">
