--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -64,7 +64,7 @@
     <div class="w-1/3 ml-20">
       <%= image_tag ("how-to.png") %>
       <div class="mt-5 bg-malibu rounded-lg p-6 font-semibold">
-        With Swissitize, you're not just memorizing facts; you re gaining a deep understanding of Switzerland, ensuring you're fully prepared for your naturalization process.
+        With Swissitize, you're not just memorizing facts; you're gaining a deep understanding of Switzerland, ensuring you're fully prepared for your naturalization process.
       </div>
     </div>
   </section>
