--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,25 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<section class="pt-10 flex flex-col items-center h-dvh bg-clear-sky" style="background-image: url('<%= asset_path("registration-bg.svg") %>'); background-size: contain; background-repeat:no-repeat; background-position:bottom;">
+  <h1 class="text-4xl mb-6">Sign up</h1>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "w-full max-w-md flex flex-col items-center" }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="field w-full mb-5">
+      <%= f.label :email, class: "block text-black mb-1" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "w-full py-2 px-4 bg-transparent border border-mercury text-black rounded-md" %>
+    </div>
+    <div class="field w-full mb-5">
+      <%= f.label :password, class: "block text-black mb-1" %>
+      <% if @minimum_password_length %>
+        <span class="text-sm text-gray-500">(<%= @minimum_password_length %> characters minimum)</span>
+      <% end %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "w-full py-2 px-4 bg-transparent border border-mercury text-black rounded-md" %>
+    </div>
+    <div class="field w-full mb-5">
+      <%= f.label :password_confirmation, class: "block text-black mb-1" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "w-full py-2 px-4 bg-transparent border border-mercury text-black rounded-md" %>
+    </div>
+    <div class="actions mt-6">
+      <%= f.submit "Sign up", class: "py-3 px-6 bg-swiss-red hover:bg-thunderbird cursor-pointer text-white rounded-full" %>
+    </div>
+  <% end %>
+  <%= render "devise/shared/links" %>
+</section>
