--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
           </svg>
         <% end %>
-        <a href="#" class="py-2 px-4 bg-white hover:bg-gold text-black rounded-full self-center" >Log out</a>
+        <%= button_to 'Sign out', destroy_user_session_path, :method => :delete, class: 'py-2 px-4 bg-white hover:bg-gold text-black rounded-full self-center' %>
       </div>
       <div class="flex gap-7">
         <a href="<%= new_user_registration_path %>" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Sign up</a>
