--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,53 +14,49 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= javascript_include_tag "nav_toggle", "data-turbo-track": "reload", defer: true %>
   </head>
   <body>
-    <header class=" sticky top-0 bg-swiss-red px-7 py-3 flex items-center justify-between text-white font-semibold text-lg">
-      <a href="/">
-        <%= image_tag ("logo.svg") %>
+    <header class="sticky top-0 bg-swiss-red px-7 py-3 flex items-center justify-between text-white font-semibold text-lg">
+      <a href="<%= home_path %>">
+        <%= image_tag("logo.svg") %>
       </a>
       <nav>
         <ul class="flex gap-24">
-          <li>
-            <a href="/" class="hover:text-gold">
-              Home
-            </a>
-          </li>
-          <li>
-            <a href="#about" class="hover:text-gold">
-              About
-            </a>
-          </li>
-          <li>
-            <a href="#how-to" class="hover:text-gold">
-              How to use
-            </a>
-          </li>
-          <li>
-            <a href="#" class="hover:text-gold">
-              Contact
-            </a>
-          </li>
+          <li><a href="<%= home_path %>" class="hover:text-gold">Home</a></li>
+          <li><a href="<%= home_path %>" class="hover:text-gold">About</a></li>
+          <li><a href="#how-to" class="hover:text-gold">How to use</a></li>
+          <li><a href="#" class="hover:text-gold">Contact</a></li>
         </ul>
       </nav>
-      <div class="flex gap-7">
-        <%= link_to new_card_collection_path, class: "flex items-center justify-center h-12 w-12 bg-white hover:bg-gold text-black rounded-full" do %>
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
-          </svg>
-        <% end %>
-        <%= button_to 'Sign out', destroy_user_session_path, :method => :delete, class: 'py-2 px-4 bg-white hover:bg-gold text-black rounded-full self-center' %>
-      </div>
-      <div class="flex gap-7">
-        <a href="<%= new_user_registration_path %>" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Sign up</a>
-        <a href="<%= new_user_session_path %>" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Log in</a>
-      </div>
+      <% if user_signed_in? %>
+        <div class="flex gap-7">
+          <%= link_to new_card_collection_path, class: "flex items-center justify-center h-12 w-12 bg-white hover:bg-gold text-black rounded-full" do %>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
+            </svg>
+          <% end %>
+          <%= link_to "My Profile", user_path(current_user), class: "py-3 px-6 bg-white hover:bg-gold text-black rounded-full" %>
+          <%= button_to 'Sign out', destroy_user_session_path, method: :delete, class: 'py-3 px-6 bg-white hover:bg-gold text-black rounded-full self-center' %>
+        </div>
+      <% else %>
+        <div class="flex gap-7">
+          <a href="<%= new_user_registration_path %>" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full">Sign up</a>
+          <a href="<%= new_user_session_path %>" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full">Log in</a>
+        </div>
+      <% end %>
     </header>
-    <div class="flex">
+    <% if user_signed_in? && !on_home_page? %>
+      <div class="flex">
+        <%= render partial: 'shared/sidebar' %>
+        <main class="flex-grow">
+          <%= yield %>
+        </main>
+      </div>
+    <% else %>
       <main class="flex-grow">
         <%= yield %>
       </main>
-    </div>
+    <% end %>
   </body>
 </html>
