--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
-
-<%= render @user %>
-
-<div>
+<% if @user %>
+  <h1><%= @user.first_name %> <%= @user.last_name %></h1>
+  <p>Email: <%= @user.email %></p>
   <%= link_to "Edit this user", edit_user_path(@user) %> |
-  <%= link_to "Back to users", users_path %>
-
-  <%= button_to "Destroy this user", @user, method: :delete %>
-</div>
+  <%= link_to "Back to users", users_path %> |
+  <%= button_to "Destroy this user", @user, method: :delete, data: { confirm: "Are you sure?" } %>
+<% else %>
+  <p>User not found.</p>
+<% end %>
