reconnected js files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <%= javascript_include_tag "nav_toggle", "data-turbo-track": "reload", defer: true %>
+    <%= javascript_include_tag "add_more_cards", "data-turbo-track": "reload", defer: true %>
+    <%= javascript_include_tag "card_switch", "data-turbo-track": "reload", defer: true %>
   </head>
   <body>
     <header class="sticky top-0 bg-swiss-red px-7 py-3 flex items-center justify-between text-white font-semibold text-lg">
