added more fields to user, achievent model and calendar

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="p-6 w-[22%] border-r border-mercury" id="side-bar">
+<div class="p-6 w-[22%] min-w-[120px] border-r border-mercury" id="side-bar">
   <button class="mb-6 pl-2" id="toggle-visibility">
     <%= image_tag("icons/eye-open.svg", 
                   id: "eye-icon",
