--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,22 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<section class="pt-10 flex flex-col items-center h-dvh bg-clear-sky" style="background-image: url('<%= asset_path("registration-bg.svg") %>'); background-size: contain; background-repeat: no-repeat; background-position: bottom;">
+  <h1 class="text-4xl mb-6">Change your password</h1>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "w-full max-w-md flex flex-col items-center" }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= f.hidden_field :reset_password_token %>
+    <div class="field w-full mb-5">
+      <%= f.label :password, "New password", class: "block text-black mb-1" %>
+      <% if @minimum_password_length %>
+        <em class="text-sm italic">(<%= @minimum_password_length %> characters minimum)</em><br />
+      <% end %>
+      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "w-full py-2 px-4 bg-transparent border border-mercury text-black rounded-md" %>
+    </div>
+    <div class="field w-full mb-5">
+      <%= f.label :password_confirmation, "Confirm new password", class: "block text-black mb-1" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "w-full py-2 px-4 bg-transparent border border-mercury text-black rounded-md" %>
+    </div>
+    <div class="actions mt-6">
+      <%= f.submit "Change my password", class: "py-3 px-6 bg-swiss-red hover:bg-thunderbird cursor-pointer text-white rounded-full" %>
+    </div>
+  <% end %>
+  <%= render "devise/shared/links" %>
+</section>
