--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,11 @@
   <div class="w-1/3 border-r pr-6">
     <div class="flex flex-col items-center">
       <div class="relative">
-        <%= image_tag("default-avatar.svg", class: "rounded-full w-32 h-32") %>
+        <% if @user.avatar.attached? %>
+          <%= image_tag @user.avatar, class: "rounded-full w-32 h-32" %>
+        <% else %>
+          <%= image_tag("default-avatar.svg", class: "rounded-full w-32 h-32") %>
+        <% end %>
         <%= link_to edit_user_path(@user), class: "absolute top-0 right-0 p-2" do %>
           <%= image_tag("icons/edit.svg", class: "w-6") %>
         <% end %>
