styling of the profile page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <%= javascript_include_tag "card_switch", "data-turbo-track": "reload", defer: true %>
   </head>
   <body>
-    <header class="sticky top-0 bg-swiss-red px-7 py-3 flex items-center justify-between text-white font-semibold text-lg">
+    <header class=" bg-swiss-red px-7 py-3 flex items-center justify-between text-white font-semibold text-lg">
       <a href="<%= home_path %>">
         <%= image_tag("logo.svg") %>
       </a>
