--- a/app/views/card_collections/new.html.erb
+++ b/app/views/card_collections/new.html.erb
@@ -1,7 +1,9 @@
 <% content_for :title, "New practice deck" %>
-<h1 class="text-4xl mb-14">Create a new practice deck</h1>
-<%= render "form", card_collection: @card_collection %>
-<br>
-<div>
-  <%= link_to "Back to practice decks", card_collections_path %>
+<div class="container mx-auto px-10 mt-10 mb-10">
+  <h1 class="text-4xl mb-14">Create a new practice deck</h1>
+  <%= render "form", card_collection: @card_collection %>
+  <br>
+  <div>
+    <%= link_to "Back to practice decks", card_collections_path, style:"text-decoration: underline" %>
+  </div>
 </div>
