--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,7 @@
 <% content_for :title, "Editing user" %>
-
-<h1>Editing user</h1>
-
 <%= render "form", user: @user %>
-
 <br>
-
-<div>
-  <%= link_to "Show this user", @user %> |
-  <%= link_to "Back to users", users_path %>
+<div class="container mx-auto px-10 mt-10 mb-10">
+  <%= link_to "Show this user", @user, style:"text-decoration: underline" %> |
+  <%= link_to "Back to users", users_path, style:"text-decoration: underline" %>
 </div>
