--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,14 @@
 <p style="color: green"><%= notice %></p>
-
 <% content_for :title, "Users" %>
-
-<h1>Users</h1>
-
-<div id="users">
-  <% @users.each do |user| %>
-    <%= render user %>
-    <p>
-      <%= link_to "Show this user", user %>
-    </p>
-  <% end %>
+<div class="container mx-auto px-10 mt-10">
+  <h1 class="text-3xl font-bold mt-4">Users</h1>
+  <div id="users">
+    <% @users.each do |user| %>
+      <%= render user %>
+      <p>
+        <%= link_to "Show this user", user %>
+      </p>
+    <% end %>
+  </div>
+  <%= link_to "New user", new_user_path %>
 </div>
-
-<%= link_to "New user", new_user_path %>
