--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
         <%= image_tag "default-avatar.svg", style: "width: 300px !important; height: 300px !important; object-fit: cover; border-radius: 50%;" %>
       <% end %>
       <%= link_to edit_user_path(@user), style: "position: absolute; top: 0px; right: -200px; padding: 10px" do %>
-        <%= image_tag("icons/edit.svg", class: "w-10") %>
+        <%= image_tag("icons/edit.svg", style: "width: 50px") %>
       <% end %>
     </div>
   </div>
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="w-1/2">
-      <h2 class="text-lg font-bold mt-8">Activity</h2>
+      <h2 class="text-lg font-bold">Activity</h2>
       <div class="border rounded-lg p-5 mt-2">
         <%= render "calendar", user: @user %>
       </div>
