selection of languages in edit profile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
     <%= javascript_include_tag "nav_toggle", "data-turbo-track": "reload", defer: true %>
     <%= javascript_include_tag "add_more_cards", "data-turbo-track": "reload", defer: true %>
     <%= javascript_include_tag "card_switch", "data-turbo-track": "reload", defer: true %>
+    <%= javascript_include_tag "languages", "data-turbo-track": "reload", defer: true %>
   </head>
   <body>
     <header class=" bg-swiss-red px-7 py-3 flex items-center justify-between text-white font-semibold text-lg">
