--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,12 +5,15 @@
       <div>
         <h1 class="text-3xl font-bold mt-4"><%= @user.first_name %> <%= @user.last_name %></h1>
         <p class="text-gray-500">@<%= @user.username %></p>
-        <p class="text-gray-400">Joined <%= @user.created_at.strftime("%B %Y") %></p>
+        <p>Joined <%= @user.created_at.strftime("%B %Y") %></p>
       </div>
       <div class="mt-6 max-w-md">
         <p><strong>Canton:</strong> <%= @user.canton %></p>
         <p><strong>Country of origin:</strong> <%= @user.country_of_origin %></p>
-        <p><strong>Languages:</strong> <%= @user.languages.present? ? JSON.parse(@user.languages).join(", ") : "Not specified" %></p>
+        <p>
+          <strong>Languages:</strong>
+          <%= @user.languages.any? ? @user.languages.join(", ") : "Not specified" %>
+        </p>
       </div>
     </div>
     <div style="display:flex; position: relative; margin-right: 250px;">
